<resources>
    <string name="app_name">MeSo</string>
    <string name="welcome">Your Mental Health Solutions</string>
    <string name="button_start">Get Started</string>
    <string name="welcome_description">MeSo is an application that pays attention to your mental health.During pandemic, there are many things that interfere with your mental health that\'s why MeSo come to help with those problems.</string>
    <string name="title_registration">Don\'t have an account yet?</string>
    <string name="description_title">Let\'s create an account</string>
    <string name="register_email">Enter your email</string>
    <string name="profile_name">Enter your name</string>
    <string name="register_password">Enter password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="email_not_valid">Invalid email format!</string>
    <string name="password_not_valid">Password less than 6 characters!</string>
    <string name="password_not_same">Passwords are not the same!</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="sign_in"> Sign in</string>
    <string name="title_login">Welcome !</string>
    <string name="login_email">Enter your email</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="diagnose">Diagnose</string>
    <string name="profile">Profile</string>
    <string name="start_diagnose">Start Diagnose</string>
    <string name="image_home">Image Home</string>
    <string name="image_mental_illness">Image Mental Illness</string>
    <string name="reset_password">Reset Password</string>
    <string name="save_profile">Save</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="search_mental_illness">Search</string>
    <string name="title">Title</string>
    <string name="title_diagnose">Answer the Following Questions</string>
    <string name="choose_your_state">Choose your state :</string>
    <string name="choose_your_country">Choose your country :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mhi_title">Have you ever attended a mental health interview ?</string>
    <string name="phi_title">Have you ever attended a physical health interview ?</string>
    <string name="mental_vs_physical">Mental vs Physical</string>
    <string name="dont_know">Dont know</string>
    <string name="obs_consequence">Obs consequence</string>
    <string name="choose_your_age">Choose your age :</string>
    <string name="what_is_your_gender">What is your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>

    <string-array name="country">
        <item>Australia</item>
        <item>Austria</item>
        <item>Bahamas</item>
        <item>Belgium</item>
        <item>Bosnia </item>
        <item>Bosnia And Herzegovina</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Finland</item>
        <item>Frannce</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Latvia</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>netherlands</item>
        <item>new Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Singapore</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Thailand</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Zimbabwe</item>
    </string-array>

    <string-array name="states">
        <item>AL</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>IA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>MA</item>
        <item>MD</item>
        <item>ME</item>
        <item>MI</item>
        <item>MN</item>
        <item>MO</item>
        <item>MS</item>
        <item>NC</item>
        <item>NE</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NV</item>
        <item>NY</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>VT</item>
        <item>WA</item>
        <item>WI</item>
        <item>WV</item>
        <item>WY</item>
    </string-array>

    <string-array name="age">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>

    </string-array>
</resources>